<resources>
    <string name="appName">Агитатор</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="exit">Выйти</string>
    <string name="versionToast">Версия приложения %s.%s от %s - %s.</string>
    <string name="versionShort">Версия: %s</string>
    <string name="alphaText">альфа версия</string>
    <string name="betaText">бета версия</string>
    <string name="releaseCandidateText">выпуск-кандидат</string>
    <string name="productionText">публичный выпуск</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="accessDenied">Доступ к приложению ограничен. Нет соответствующей роли, обратитесь к администратору.</string>
    <string name="checkInternetConnection">У приложения отсутствует доступ к серверу. Проверьте интернет.</string>
    <string name="serverNotAvailable">Сервер не доступен</string>
    <string name="wrongLoginOrPassword">Логин или пароль введены не верно.</string>
    <string name="offlineDenied">Авторизации в offline не доступна, требуется выполнить вход в online</string>
    <string name="signOutMessage">Нажмите повторно для выхода из приложения.</string>
    <string name="synchronization">Синхронизация</string>
    <string name="routes">Маршруты</string>
    <string name="userProfile">Профиль пользователя</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="mainMenu">Главное меню</string>
    <string name="settings">Настройки</string>
    <string name="performance">Производительность</string>
    <string name="about_app">О приложении</string>
    <string name="debug_mode">Отладка</string>
    <string name="total">Общие</string>
    <string name="cancel">Отмена</string>
    <string name="network_error">Отсутствует подключение к интернету. Нажмите на кнопку старт чтобы попоробовать снова</string>
    <string name="points">Точки маршрутов</string>
    <string name="not_done">Не выполнено</string>
    <string name="done">Выполнено</string>
    <string name="synced">Синхронизировано</string>
    <string name="choose_act_type">Выбирете тип акта</string>
    <string name="info">Информация</string>
    <string name="plombs">Пломбы</string>
    <string name="period">Период выполнения</string>
    <string name="route_history">История маршрута</string>
    <string name="was_extended">Было продлено до</string>
    <string name="notice">Примечание</string>
    <string name="begin">Начало</string>
    <string name="end">Конец</string>
    <string name="changes">Изменения</string>
    <string name="private_account_short">ЛС</string>
    <string name="address">Адрес</string>
    <string name="control_act_title">Снятие контрольного показания</string>
    <string name="act_date">Дата показания</string>
    <string name="previous_date">Предыдущая дата</string>
    <string name="current_date">Текущая дата</string>
    <string name="meter_readings_title">АЭ-, Ночь/Пик/Полупик (Квт/ч)</string>
    <string name="subscriber_info">Данные представителя</string>
    <string name="fio">ФИО</string>
    <string name="save_act">Сохранить акт</string>
    <string name="previous_readings">Предыдущие показания</string>
    <string name="current_readings">Текущие показания</string>
    <string name="zero">0</string>
    <string name="general_info">Общая информация</string>
    <string name="subscr_account_short">ЛС</string>
    <string name="readings">Показания</string>
    <string name="last_readings_date">Дата последнего показания</string>
    <string name="meter_info">Данные прибора</string>
    <string name="subscr_account_long">Лицевой счет</string>
    <string name="sub_division">Участок</string>
    <string name="photos">Фотографии</string>
    <string name="press_to_add_photo">Нажмите сюда, чтобы \n добавить фото</string>
    <string name="meter">Прибор</string>
    <string name="not_permissions">Предоставлены не все разрешения.</string>
    <string name="permissions_grant">Разрешения получены.</string>
    <string name="no_attachments">Нет вложений</string>
    <string name="server_available">Сервер доступен</string>
    <string name="network_availablre">Сеть доступна</string>
    <string name="server_not_available">Сервер не доступен</string>
    <string name="network_not_available">Сеть не доступна</string>
    <string name="filters">Фильтры</string>
    <string name="route_filters">Фильтры маршрутов</string>
    <string name="point_filters">Фильтры заданий</string>
    <string name="route_name">Наименование маршрута</string>
    <string name="route_type">Тип маршрута</string>
    <string name="save_filters">Сохранить</string>
    <string name="cancel_filters">Сбросить</string>
    <string name="meter_number">Номер ПУ</string>
    <string name="point_status">Статус задания</string>
    <string name="route_status">Статус маршрута</string>
    <string name="route_date">Дата маршрута</string>
    <string name="choose">Выбрать</string>
    <string name="all_points">Все задания</string>
    <string name="drop">Сбросить</string>
    <string name="click_to_select">Нажимте чтобы выбрать</string>
    <string name="all_routes">Все маршруты</string>
    <string name="mode_all_points">Задания по всем маршрутам</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="routes_sort">Сортировка маршрутов</string>
    <string name="sort_start_date">Сортировать по дате начала</string>
    <string name="sort_end_date">Сортировать по дате окончания</string>
    <string name="adress_sort">Сортировка по адресу</string>
    <string name="points_sort">Сортировка заданий</string>
    <string name="set_pin">Установить пин-код</string>
    <string name="clear_pin">Удалить пин</string>
    <string name="forgot_pin_code">Забыли пин-код?</string>
    <string name="back_to_pin">Вернуться к вводу пин-кода</string>

    <plurals name="plurals_routes">
        <item quantity="zero">%1$d заданий</item>
        <item quantity="one">%1$d задание</item>
        <item quantity="two">%1$d задания</item>
        <item quantity="few">%1$d задания</item>
        <item quantity="many">%1$d заданий</item>
        <item quantity="other">%1$d заданий</item>
    </plurals>
    <string name="geo">Получение geo-данных</string>
    <string name="finish">Завершить</string>
    <string name="revert_route_title">Возобновить ранее завершенный маршрут?</string>
    <string name="finish_route_title">Завершенный маршрут?</string>
    <string name="no_internet">НЕТ ИНТЕРНЕТА</string>
    <string name="no_server_connection">НЕТ СОЕДИНЕНИЯ С СЕРВЕРОМ</string>
    <string name="house_list">Список домов</string>
    <string name="apartment_count">Всего квартир: %s</string>
    <string name="apartment_open">Открытых квартир: %s</string>
    <string name="signs_received">Количество собранных подписей: %s</string>
    <string name="statistic">Статистика</string>
    <string name="expand_collapse">Развернуть/Свернуть</string>
    <string name="clear">Очистить</string>
    <string name="show_password">Показать пароль</string>
    <string name="finger">Отпечаток пальца</string>
    <string name="to_simple_authorization">Вернуться к обычной авторизации</string>
</resources>