<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_background"
    android:padding="@dimen/size_s_24">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_info"
        android:textColor="@color/colorPrimary" />

    <ru.mobnius.vote.ui.component.TextFieldView
        android:id="@+id/fPointInfo_tfvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fieldLabel="@string/address" />

    <ru.mobnius.vote.ui.component.TextFieldView
        android:id="@+id/fPointInfo_tfvNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fieldLabel="@string/notice" />

</LinearLayout>