<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fStatistic_tvAppTotal"
        style="@style/TextViewMainText"
        android:text="@string/apartment_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fStatistic_tvOpenApp"
        style="@style/TextViewMainText"
        android:text="@string/apartment_open"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fStatistic_tvAppTotal" />

    <TextView
        android:id="@+id/fStatistic_tvSignsTotal"
        style="@style/TextViewMainText"
        android:text="@string/signs_received"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fStatistic_tvOpenApp" />

</androidx.constraintlayout.widget.ConstraintLayout>