<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: 17/01/2020 можно переделать на RecyclerView -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_xxxs_4"
    >

    <!-- TODO: 17/01/2020 Можно переделать на отдельный компонент. см. ru.mobnius.vote.ui.component.TextFieldView -->
    <RelativeLayout
        android:id="@+id/fRouteInfo_rlPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:padding="@dimen/size_s_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fRouteInfo_tvPeriodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/period"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/fRouteInfo_llPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fRouteInfo_tvPeriodLabel"
            android:orientation="vertical"
            android:visibility="gone">

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fRouteInfo_tfvBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fieldLabel="@string/begin" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fRouteInfo_tfvEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fieldLabel="@string/end" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fRouteInfo_tfvNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:fieldLabel="@string/notice" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fRouteInfo_tfvExtended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:fieldLabel="@string/was_extended" />
        </LinearLayout>

        <ImageView
            android:id="@+id/fRouteInfo_ivPeriodArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_arrow_drop_down_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fRouteInfo_rlHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xxs_8"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        android:padding="@dimen/size_s_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fRouteInfo_rlPeriod">
            <TextView
                android:id="@+id/fRouteInfo_tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/route_history"
                android:textColor="@color/colorPrimary" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fRouteInfo_tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fRouteInfo_tvHistory"
                app:fieldLabel="@string/changes"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/fRouteInfo_ivHistoryArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_drop_down_24dp" />
    </RelativeLayout>

    <ru.mobnius.vote.ui.component.ExpandableLayout
        android:id="@+id/fRouteInfo_rvExpandableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_xxxs_4"
        app:labelText="@string/route_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fRouteInfo_rlHistory">

    </ru.mobnius.vote.ui.component.ExpandableLayout>

    <Button
        android:id="@+id/fRouteInfo_bFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fRouteInfo_rvExpandableLayout"
        android:background="@color/colorFail"
        android:textColor="@color/contentColor"
        android:layout_margin="@dimen/size_xxs_8"
        android:layout_marginTop="@dimen/space_large"/>

</androidx.constraintlayout.widget.ConstraintLayout>