<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fPointFilter_tMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/fPointFilter_rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fPointFilter_tMenu">

        <TextView
            android:id="@+id/fPointFilter_tvTitle"
           style="@style/TextViewMainTitle"
            android:text="@string/point_filters" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fPointFilter_rlTop"
        android:background="@color/contentColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fPointFilter_tilMeterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_xxxs_4"
                android:hint="@string/meter"
                android:paddingTop="@dimen/size_s_24">

                <EditText
                    android:id="@+id/fPointFilter_etMeterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fPointFilter_tilSubscrName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_xxxs_4"
                android:hint="@string/subscr_account_long"
                android:paddingTop="@dimen/size_s_24">

                <EditText
                    android:id="@+id/fPointFilter_etSubscrName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fPointFilter_tilAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_xxxs_4"
                android:hint="@string/address"
                android:paddingTop="@dimen/size_s_24">

                <EditText
                    android:id="@+id/fPointFilter_etAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextViewLabelText"
                android:labelFor="@+id/fPointFilter_spPointStatus"
                android:text="@string/point_status"
                android:layout_marginStart="@dimen/size_xxxs_4" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fPointFilter_spPointStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_xxxs_4"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:id="@+id/fPointFilter_tvRouteFilterTitle"
                style="@style/TextViewLabelText"
                android:labelFor="@+id/fPointFilter_spRouteFilter"
                android:text="@string/routes"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fPointFilter_spRouteFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:visibility="gone"
                android:layout_margin="@dimen/size_xxxs_4"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fPointFilter_scAllRoutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_xxxs_4"
                android:layout_marginTop="@dimen/size_s_24"
                android:layout_marginEnd="@dimen/size_xxxs_4"
                android:text="@string/mode_all_points"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>