<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fRouteFilter_tMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">


    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/fRouteFilter_rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fRouteFilter_tMenu">

        <TextView
            android:id="@+id/fRouteFilter_tvTitle"
            style="@style/TextViewMainTitle"
            android:text="@string/route_filters" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fRouteFilter_rlTop"
        android:background="@color/contentColor">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_status"
                android:layout_marginStart="@dimen/size_xxxs_4"
                android:layout_marginTop="@dimen/size_s_24"
                android:labelFor="@id/fRouteFilter_spRouteStatus"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fRouteFilter_spRouteStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:layout_margin="@dimen/size_xxxs_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_type"
                android:layout_marginStart="@dimen/size_xxxs_4"
                android:layout_marginTop="@dimen/size_s_24"
                android:labelFor="@id/fRouteFilter_spRouteTypes"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fRouteFilter_spRouteTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_xxxs_4"
                android:background="@drawable/spinner_background" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_s_24"
                android:layout_marginStart="@dimen/size_xxxs_4"
                android:text="@string/route_date"
                android:labelFor="@id/fRouteFilter_tvRouteDate"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/fRouteFilter_tvRouteDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_xxxs_4"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/fRouteFilter_ivCancel"
                    android:textColor="@color/colorPrimary"
                    android:padding="3dp"
                    android:hint="@string/click_to_select" />

                <ImageView
                    android:id="@+id/fRouteFilter_ivCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:src="@drawable/ic_clear_text_24dp" />

            </RelativeLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fRouteFilter_scAllPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_xxxs_4"
                android:paddingTop="@dimen/size_s_24"
                android:paddingBottom="@dimen/size_s_24"
                android:text="@string/mode_all_points"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
