<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <LinearLayout
        android:id="@+id/fMeterReadings_rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fMeterReadings_tvTitle"
            style="@style/TextViewMainTitle"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/control_act_title" />

        <ImageView
            android:id="@+id/fMeterReadings_ivTakePhoto"
            android:layout_marginTop="@dimen/size_s_24"
            android:layout_marginEnd="@dimen/size_s_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera_24dp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fMeterReadings_rlTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/contentColor"
            >

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fMeterReadings_Guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/fMeterReadings_tvActDate"
                style="@style/TextViewMainText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/act_date" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fMeterReadings_tfvPreviousDate"
                style="@style/TextViewLabelText"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_tvActDate"
                app:layout_constraintStart_toStartOf="parent"
                app:fieldLabel="@string/previous_date" />

            <ru.mobnius.vote.ui.component.TextFieldView
                android:id="@+id/fMeterReadings_tfvCurrentDate"
                style="@style/TextViewLabelText"
                app:layout_constraintStart_toStartOf="@id/fMeterReadings_Guideline"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_tvActDate"
                android:layout_marginEnd="@dimen/size_s_24"
                app:fieldLabel="@string/current_date" />

            <TextView
                android:id="@+id/fMeterReadings_tvMeterReadingsTitle"
                style="@style/TextViewMainText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_tfvCurrentDate"
                android:text="@string/meter_readings_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fMeterReadings_rvReadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_tvMeterReadingsTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/fMeterReadings_tvNotice"
                style="@style/TextViewLabelText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_rvReadings"
                android:labelFor="@id/fMeterReadings_tietNotice"
                android:text="@string/notice" />

            <EditText
                android:id="@+id/fMeterReadings_tietNotice"
                style="@style/TextViewMainText"
                android:layout_width="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="@dimen/size_s_24"
                android:backgroundTint="@color/document_text"
                android:gravity="start"
                android:minLines="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fMeterReadings_tvNotice" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/fMeterReadings_rlBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/contentColor"
        android:padding="@dimen/size_s_24">

        <Button
            android:id="@+id/fMeterReadings_btnSave"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/fMeterReadings_ibGoToPhoto"
            android:enabled="false"
            android:layout_marginEnd="@dimen/size_s_24"
            android:text="@string/save_act" />

        <ImageButton
            android:id="@+id/fMeterReadings_ibGoToPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/contentColor"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_camera_in_rectangle_24dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>